# AME

./: .gitignore  AME.py  CONTRIBUTING.md  README.md  pyproject.toml
tools/: MSO.md  conf-import.py  libreoffice-conf.py
tools/formats/: libreoffice.py  msoffice.py
